# libc

./: .gitignore  CMakeLists.txt
.github/workflows/: linux.yml
arch/x86_64/: CMakeLists.txt  raise.S  syscall.S  syscalls.c
arch/x86_64/crt/: CMakeLists.txt  crt1.S  crti.S
arch/x86_64/ld/: CMakeLists.txt  crt1.S  dso_info.h  init.S  ld-lcnix.c  resolve.c  resolve_one.S  syscallmin.S
arch/x86_64/ld/scripts/: ld-lcnix-x86_64.so.ld
common/: CMakeLists.txt  __cxa_exit.c  exit.c  init.c  puts.c
include/: elf.h  fcntl.h  signal.h  stdlib.h  string.h  unistd.h
include/bits/: fctl.inc  mman.inc  null.h  signal.inc  sys_declare.inc  syscall.h  unistd.inc
include/sys/: mman.h  types.h
ld/: CMakeLists.txt  ld-lcnix.c
libgcc/: CMakeLists.txt
libgcc/arch/x86_64/: CMakeLists.txt
libgcc/common/: CMakeLists.txt
libm/: CMakeLists.txt
test/: CMakeLists.txt
test/hello/: CMakeLists.txt  hello.c
test/hello-write/: CMakeLists.txt  hello-write.c
